Fix menu button color on mobile devices

--- a/frontend/app/app.scss
+++ b/frontend/app/app.scss
@@ -16,6 +16,10 @@ a, .pointer {
 
 .navbar {
   border-radius: 0;
+  .navbar-toggle {
+    color: white;
+    border-color: #CCC;
+  }
 }
 
 table {
